--- a/index.ipynb
+++ b/index.ipynb
@@ -28,9 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/tqdm/autonotebook/__init__.py:14: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  \" (e.g. in jupyter console)\", TqdmExperimentalWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -77,17 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person(object):\n",
+    "    is_alive = True\n",
+    "    is_infected = False\n",
+    "    has_been_infected = False\n",
+    "    newly_infected = False\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, pct_vaccinated):\n",
+    "        self.get_vaccinated(pct_vaccinated)\n",
     "        \n",
     "    def get_vaccinated(self, pct_vaccinated):\n",
-    "        pass"
+    "        rand = np.random.random()\n",
+    "        compare = 1 - pct_vaccinated\n",
+    "        self.is_vaccinated = True if rand > compare else False"
    ]
   },
   {
@@ -131,42 +146,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Simulation(object):\n",
     "    \n",
     "    def __init__(self, population_size, disease_name, r0, mortality_rate,  total_time_steps, pct_vaccinated, num_initial_infected):\n",
-    "        self.r0 = None\n",
-    "        self.disease_name = None\n",
-    "        self.mortality_rate = None\n",
-    "        self.total_time_steps = None\n",
-    "        self.current_time_step = None\n",
-    "        self.total_infected_counter = None\n",
-    "        self.current_infected_counter = None\n",
-    "        self.dead_counter = None\n",
-    "        self.population = None\n",
+    "        self.r0 = r0/100\n",
+    "        self.disease_name = disease_name\n",
+    "        self.mortality_rate = mortality_rate\n",
+    "        self.total_time_steps = total_time_steps\n",
+    "        self.current_time_step = 0\n",
+    "        self.total_infected_counter = 0\n",
+    "        self.current_infected_counter = 0\n",
+    "        self.dead_counter = 0\n",
+    "        self.population = []\n",
     "        # This attribute is used in a function that is provided for you in order to log statistics from each time_step.  \n",
     "        # Don't touch it!\n",
     "        self.time_step_statistics_df = pd.DataFrame()\n",
     "        \n",
     "        # Create a for loop the size of the population we want in this simulation\n",
-    "        for i in range(None):\n",
+    "        for i in range(len(self.population)):\n",
     "            # Create new person\n",
-    "            new_person = None\n",
+    "            new_person = Person()\n",
     "            # We'll add infected persons to our simulation first.  Check if the current number of infected are equal to the \n",
     "            # num_initial_infected parameter.  If not, set new_person to be infected\n",
-    "            if self.current_infected_counter != None:\n",
-    "                new_person.is_infected = None\n",
+    "            if self.current_infected_counter != self.num_initial_infected:\n",
+    "                new_person.is_infected = True\n",
     "                # don't forget to increment both infected counters!\n",
-    "                self.total_infected_counter += None\n",
-    "                self.current_infected_counter += None\n",
+    "                self.total_infected_counter += 1\n",
+    "                self.current_infected_counter += 1\n",
     "            # if new_person is not infected, determine if they are vaccinated or not by using their `get_vaccinated` method\n",
     "            # Then, append new_person to self.population\n",
     "            else:\n",
-    "                \n",
-    "            self.population.append(None)\n",
+    "                self.population.append(new_person)\n",
     "       \n",
     "        print(\"-\" * 50)\n",
     "        print(\"Simulation Initiated!\")\n",
@@ -249,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,20 +271,20 @@
     "    num_interactions = None\n",
     "    while num_interactions < 100:\n",
     "        # Randomly select a person from self.population\n",
-    "        random_person = None\n",
+    "        random_person = np.random.choice(self.population)\n",
     "        # This only counts as an interaction if the random person selected is alive.  If the person is dead, do nothing, \n",
     "        # and the counter doesn't increment, repeating the loop and selecting a new person at random.\n",
     "        # check if the person is alive.\n",
-    "        if None:\n",
+    "        if random_person.is_alive:\n",
     "            # CASE: Random person is not vaccinated, and has not been infected before, making them vulnerable to infection\n",
-    "            if None and None:\n",
+    "            if not random_person.is_vaccinated and not random_person.has_been_infected:\n",
     "                # Generate a random number between 0 and 1\n",
-    "                random_number = None\n",
+    "                random_number = np.random.random\n",
     "                # If random_number is greater than or equal to (1 - self.r0), set random person as newly_infected\n",
-    "                if None >= None:\n",
-    "                    random_person.newly_infected = None\n",
+    "                if random_number >= (1- self.r0):\n",
+    "                    random_person.newly_infected = True\n",
     "            # Don't forget to increment num_interactions, and make sure it's at this level of indentation\n",
-    "            num_interactions += None\n",
+    "            num_interactions += 1\n",
     "\n",
     "# Adds this function to our Simulation class\n",
     "Simulation.infected_interaction = infected_interaction"
@@ -309,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,37 +341,37 @@
     "    This method will be called at the end of each time step.  All states must be resolved before the next time step can begin.\n",
     "    \"\"\"\n",
     "    # Iterate through each person in the population\n",
-    "    for person in None:\n",
+    "    for person in self.population:\n",
     "        # We only need to worry about the people that are still alive\n",
-    "        if None: \n",
+    "        if person.is_alive: \n",
     "            # CASE: Person was infected this round.  We need to stochastically determine if they die or recover from the disease\n",
     "            # Check if person is_infected\n",
-    "            if None:\n",
+    "            if person.is_infected:\n",
     "                # Generate a random number\n",
-    "                random_number = None\n",
+    "                random_number = np.random.random()\n",
     "                # If random_number is >= (1 - self.mortality_rate), set the person to dead and increment the simulation's death\n",
     "                # counter\n",
-    "                if None >= None:\n",
+    "                if random_number >= (1 - self.mortality_rate):\n",
     "                    # Set is_alive and in_infected both to False\n",
-    "                    person.is_alive = None\n",
-    "                    person.is_infected = None\n",
+    "                    person.is_alive = False\n",
+    "                    person.is_infected = False\n",
     "                    # Don't forget to increment self.dead_counter, and decrement self.current_infected_counter\n",
-    "                    self.dead_counter += None\n",
-    "                    self.current_infected_counter -= None\n",
+    "                    self.dead_counter += 1\n",
+    "                    self.current_infected_counter -= 1\n",
     "                else:\n",
     "                    # CASE: They survive the disease and recover.  Set is_infected to False and has_been_infected to True\n",
-    "                    person.is_infected = None\n",
-    "                    person.has_been_infected = None\n",
+    "                    person.is_infected = False\n",
+    "                    person.has_been_infected = True\n",
     "                    # Don't forget to decrement self.current_infected_counter!\n",
-    "                    self.current_infected_counter -= None\n",
+    "                    self.current_infected_counter -= 1\n",
     "            # CASE: Person was newly infected during this round, and needs to be set to infected before the start of next round\n",
     "            elif None:\n",
     "                # Set is_infected to True, newly_infected to False, and increment both self.current_infected_counter and \n",
     "                # self.total_infected_counter\n",
-    "                person.is_infected = None\n",
-    "                person.newly_infected = None\n",
-    "                self.current_infected_counter += None\n",
-    "                self.total_infected_counter += None\n",
+    "                person.is_infected = True\n",
+    "                person.newly_infected = False\n",
+    "                self.current_infected_counter += 1\n",
+    "                self.total_infected_counter += 1\n",
     "                \n",
     "Simulation._resolve_states = _resolve_states"
    ]
@@ -381,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,18 +410,18 @@
     "    3. Increment self.current_time_step by 1. \n",
     "    \"\"\"\n",
     "    # Iterate through each person in the population\n",
-    "    for person in None:\n",
+    "    for person in self.population:\n",
     "        # Check only for people that are alive and infected\n",
-    "        if None and None:\n",
+    "        if person.is_alive and person.is_infected:\n",
     "            # Call self.infected_interaction() and pass in this infected person\n",
-    "            None\n",
+    "            self.infected_interaction(person)\n",
     "    \n",
     "    # Once we've made it through the entire population, call self._resolve_states()\n",
-    "    None\n",
+    "    self._resolve_states()\n",
     "    \n",
     "    # Now, we're almost done with this time step.  Log summary statistics, and then increment self.current_time_step by 1.\n",
-    "    None\n",
-    "    self.current_time_step += None\n",
+    "    self._log_time_step_statistics()\n",
+    "    self.current_time_step += 1\n",
     "\n",
     "# Adds this function to our Simulation class\n",
     "Simulation._time_step = _time_step"
@@ -424,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,20 +533,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "Simulation Initiated!\n",
+      "--------------------------------------------------\n",
+      "\n",
+      "Summary Statistics for Time Step 0\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "Disease Name: Ebola\n",
+      "R0: 2.0\n",
+      "Mortality Rate: 50.0%\n",
+      "Total Population Size: 0\n",
+      "Total Number of Vaccinated People: 0\n",
+      "Total Number of Immune: 0\n",
+      "Current Infected: 0\n",
+      "Deaths So Far: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "sim = None"
+    "sim = Simulation(2000, \"Ebola\", 2, .5,  20, .85, 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "IntProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/tqdm/_tqdm_notebook.py\u001b[0m in \u001b[0;36mstatus_printer\u001b[0;34m(_, total, desc, ncols)\u001b[0m\n\u001b[1;32m    102\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtotal\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m                 \u001b[0mpbar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIntProgress\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtotal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# No total? Show info style bar with no progress tqdm status\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'IntProgress' is not defined",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mImportError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-bf40240106ca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Call sim.run() below!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-26-520c087a47d8>\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \"\"\"\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtotal_time_steps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0;31m# Print out the current time step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Beginning Time Step {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/tqdm/_tqdm_notebook.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    210\u001b[0m         \u001b[0;31m# Replace with IPython progress bar display (with correct total)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m         self.sp = self.status_printer(\n\u001b[0;32m--> 212\u001b[0;31m             self.fp, self.total, self.desc, self.ncols)\n\u001b[0m\u001b[1;32m    213\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdesc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m  \u001b[0;31m# trick to place description before the bar\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/tqdm/_tqdm_notebook.py\u001b[0m in \u001b[0;36mstatus_printer\u001b[0;34m(_, total, desc, ncols)\u001b[0m\n\u001b[1;32m    109\u001b[0m             \u001b[0;31m# #187 #451 #558\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m             raise ImportError(\n\u001b[0;32m--> 111\u001b[0;31m                 \u001b[0;34m\"IntProgress not found. Please update jupyter and ipywidgets.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    112\u001b[0m                 \u001b[0;34m\" See https://ipywidgets.readthedocs.io/en/stable\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m                 \"/user_install.html\")\n",
+      "\u001b[0;31mImportError\u001b[0m: IntProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html"
+     ]
+    }
+   ],
    "source": [
-    "# Call sim.run() below!\n"
+    "# Call sim.run() below!\n",
+    "sim.run()"
    ]
   },
   {
@@ -586,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
