Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,6 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "class Person(object):\n",
     "    is_alive = True\n",
     "    is_infected = False\n",
@@ -99,10 +100,11 @@
     "    def __init__(self, pct_vaccinated):\n",
     "        self.get_vaccinated(pct_vaccinated)\n",
     "        \n",
+    "        \n",
     "    def get_vaccinated(self, pct_vaccinated):\n",
     "        rand = np.random.random()\n",
     "        compare = 1 - pct_vaccinated\n",
-    "        self.is_vaccinated = True if rand > compare else False"
+    "        self.is_vaccinated = True if rand > compare else False\n"
    ]
   },
   {
