--- a/index.ipynb
+++ b/index.ipynb
@@ -355,14 +355,17 @@
     "    for person in self.population:\n",
     "        # We only need to worry about the people that are still alive\n",
     "        if person.is_alive: \n",
+    "        \t#print(\"alive\")\n",
     "            # CASE: Person was infected this round.  We need to stochastically determine if they die or recover from the disease\n",
     "            # Check if person is_infected\n",
     "            if person.is_infected:\n",
+    "            \t#Print(\"infected\")\n",
     "                # Generate a random number\n",
     "                random_number = np.random.random()\n",
     "                # If random_number is >= (1 - self.mortality_rate), set the person to dead and increment the simulation's death\n",
     "                # counter\n",
     "                if random_number >= (1 - self.mortality_rate):\n",
+    "                \t#print(\"dead\")\n",
     "                    # Set is_alive and in_infected both to False\n",
     "                    person.is_alive = False\n",
     "                    person.is_infected = False\n",
@@ -370,13 +373,14 @@
     "                    self.dead_counter += 1\n",
     "                    self.current_infected_counter -= 1\n",
     "                else:\n",
+    "                \t#print(\"survived\")\n",
     "                    # CASE: They survive the disease and recover.  Set is_infected to False and has_been_infected to True\n",
     "                    person.is_infected = False\n",
     "                    person.has_been_infected = True\n",
     "                    # Don't forget to decrement self.current_infected_counter!\n",
     "                    self.current_infected_counter -= 1\n",
     "            # CASE: Person was newly infected during this round, and needs to be set to infected before the start of next round\n",
-    "            elif None:\n",
+    "            elif person.newly_infected:\n",
     "                # Set is_infected to True, newly_infected to False, and increment both self.current_infected_counter and \n",
     "                # self.total_infected_counter\n",
     "                person.is_infected = True\n",
