Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -414,6 +414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def _time_step(self):\n",
     "    \"\"\"\n",
     "    Compute 1 time step of the simulation. This function will make use of the helper methods we've created above. \n",
@@ -428,6 +429,7 @@
     "    for person in self.population:\n",
     "        # Check only for people that are alive and infected\n",
     "        if person.is_alive and person.is_infected:\n",
+    "            #print(\"alive and infected\")\n",
     "            # Call self.infected_interaction() and pass in this infected person\n",
     "            self.infected_interaction(person)\n",
     "    \n",
