Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -471,19 +471,21 @@
     "#     # CASE: Any other round\n",
     "#     else:\n",
     "        # Compute summary statistics for currently infected, alive, and dead, and append them to time_step_snapshots_df\n",
+    "    current_infected = sum([x.is_infected for x in self.population])\n",
+    "    alive = sum([x.is_alive for x in self.population])\n",
+    "    dead = len(self.population) - alive\n",
+    "    \n",
     "    row = {\n",
     "        \"Time Step\": self.current_time_step,\n",
-    "        \"Currently Infected\": self.current_infected_counter,\n",
+    "        \"Currently Infected\": current_infected, #self.current_infected_counter,\n",
     "        \"Total Infected So Far\": self.total_infected_counter,\n",
-    "        \"Alive\": len(self.population) - self.dead_counter,\n",
-    "        \"Dead\": self.dead_counter\n",
+    "        \"Alive\": alive, #len(self.population) - self.dead_counter,\n",
+    "        \"Dead\": dead #self.dead_counter\n",
     "    }\n",
     "    self.time_step_statistics_df = self.time_step_statistics_df.append(row, ignore_index=True)\n",
     "    \n",
     "    if write_to_file:\n",
-    "        self.time_step_statistics_df.to_csv(\"simulation.csv\", mode='w+')\n",
-    "        \n",
-    "Simulation._log_time_step_statistics = _log_time_step_statistics"
+    "        self.time_step_statistics_df.to_csv(\"simulation.csv\", mode='w+')"
    ]
   },
   {
