Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -485,7 +485,9 @@
     "    self.time_step_statistics_df = self.time_step_statistics_df.append(row, ignore_index=True)\n",
     "    \n",
     "    if write_to_file:\n",
-    "        self.time_step_statistics_df.to_csv(\"simulation.csv\", mode='w+')"
+    "        self.time_step_statistics_df.to_csv(\"simulation.csv\", mode='w+')\n",
+    "\n",
+    "Simulation._log_time_step_statistics = _log_time_step_statistics\n"
    ]
   },
   {
