--- a/index.ipynb
+++ b/index.ipynb
@@ -522,15 +522,16 @@
     "    \n",
     "    for _ in tqdm(range(self.total_time_steps)):\n",
     "        # Print out the current time step \n",
-    "        print(\"Beginning Time Step {}\".format(None))\n",
+    "        print(\"Beginning Time Step {}\".format(_))\n",
     "        # Call our `_time_step()` function\n",
-    "        None\n",
+    "        self._time_step()\n",
     "    \n",
     "    # Simulation is over--log results to a file by calling _log_time_step_statistics(write_to_file=True)\n",
     "    self._log_time_step_statistics(write_to_file=True)\n",
     "\n",
     "# Adds the run() function to our Simulation class.\n",
-    "Simulation.run = run"
+    "Simulation.run = run\n",
+    "\n"
    ]
   },
   {
